controller/test/e2e/features/agentgateway/oauth2auth/testdata/common.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca
  namespace: default
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIFfDCCA2SgAwIBAgIUOBEwNkgGCBk5gTlks4MgZjBwcB0wDQYJKoZIhvcNAQEL
[...]
    yamda6yFfH9bkPO+XBK3lQ==
    -----END CERTIFICATE-----
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: oauth2-discovery-tls
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: dummy-idp
  validation:
    hostname: dummy-idp.default.svc.cluster.local
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: ca
