controller/test/e2e/features/agentgateway/oauth2auth/testdata/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-oauth2-gw
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "oauth2gateway.com"
  rules:
  - backendRefs:
    - name: backend
      port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gateway-oauth2-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    oauth2:
      issuer: http://oauth2-discovery.agentgateway-base.svc.cluster.local:8080
      providerBackendRef:
        kind: Service
        name: oauth2-discovery
        port: 8080
      clientId: agw-client
      clientSecret: agw-secret
      redirectUri: https://oauth2gateway.com/_gateway/callback
      scopes:
      - openid
      - profile
