controller/test/e2e/features/agentgateway/oauth2auth/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-oauth2
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "oauth2route.com"
  rules:
  - backendRefs:
    - name: backend
      port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-oauth2-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure-oauth2
  traffic:
    oauth2:
      issuer: http://oauth2-discovery.agentgateway-base.svc.cluster.local:8080
      providerBackendRef:
        kind: Service
        name: oauth2-discovery
        port: 8080
      clientId: agw-client
      clientSecret: agw-secret
      redirectUri: https://oauth2route.com/_gateway/callback
      scopes:
      - openid
      - profile
